# interpolation

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cameraclass.cpp  cameraclass.h  colorshaderclass.cpp  colorshaderclass.h  d3dclass.cpp  d3dclass.h  defines.h  fieldclass.cpp  fieldclass.h  graphicsclass.cpp  graphicsclass.h  inputclass.cpp  inputclass.h  interpolation.cpp  interpolation.h  main.cpp  modelclass.cpp  modelclass.h  pointclass.cpp  pointclass.h  polygonclass.cpp  polygonclass.h  systemclass.cpp  systemclass.h
